More support for 2.4 Change main menu to ajax Removed AppContext Cleanup of not used components

--- a/app/views/blog/addOrEdit.scala.html
+++ b/app/views/blog/addOrEdit.scala.html
@@ -1,4 +1,4 @@
-@(blogPostForm: Form[models.formdata.BlogPostsForm], editingBlogPosts: Option[models.BlogPost] = None, extraValues: models.viewmodels.EditBlogPostsExtraValues)(implicit flash: Flash = Flash.emptyCookie, request: RequestHeader, messages: Messages, appContext: AppContext)
+@(blogPostForm: Form[models.formdata.BlogPostsForm], editingBlogPosts: Option[models.BlogPost] = None, extraValues: models.viewmodels.EditBlogPostsExtraValues)(implicit flash: Flash = Flash.emptyCookie, request: RequestHeader, messages: Messages)
 
 
 @main(Messages("blog.create.title"), footerHtml = file.modalImages.render(messages)){
