--- a/app/views/campaign/index.scala.html
+++ b/app/views/campaign/index.scala.html
@@ -1,4 +1,4 @@
-@()(implicit request: RequestHeader, messages: Messages, appContext: AppContext)
+@()(implicit request: RequestHeader, messages: Messages)
 
 @main(Messages("campaign.title"), headerVisible = false, footerVisible = false){
     <div class="container-fluid newsletter">
