--- a/app/views/contentcolumns/twocolumn.scala.html
+++ b/app/views/contentcolumns/twocolumn.scala.html
@@ -4,7 +4,7 @@
         column1Header: String = "",
         column1Body: String = "",
         column2Header: String = "",
-        column2Body: String = "")(implicit request: RequestHeader, messages: Messages, appContext: AppContext)
+        column2Body: String = "")(implicit request: RequestHeader, messages: Messages)
 
 @main(urlTitle) {
 
