--- a/app/views/custom/Registration/resetPasswordPage.scala.html
+++ b/app/views/custom/Registration/resetPasswordPage.scala.html
@@ -1,4 +1,4 @@
-@(resetForm:play.api.data.Form[(String, String)], token: String)(implicit request: RequestHeader, env: securesocial.core.RuntimeEnvironment, messages: Messages, appContext: AppContext)
+@(resetForm:play.api.data.Form[(String, String)], token: String)(implicit request: RequestHeader, env: securesocial.core.RuntimeEnvironment, messages: Messages)
 @import helper._
 @import securesocial.core.IdentityProvider
 @import play.twirl.api.Html
