--- a/app/views/custom/Registration/signUp.scala.html
+++ b/app/views/custom/Registration/signUp.scala.html
@@ -1,4 +1,4 @@
-@(signUpForm:play.api.data.Form[securesocial.controllers.RegistrationInfo], token: String)(implicit request: RequestHeader, env: securesocial.core.RuntimeEnvironment, messages: Messages, appContext: AppContext)
+@(signUpForm:play.api.data.Form[securesocial.controllers.RegistrationInfo], token: String)(implicit request: RequestHeader, env: securesocial.core.RuntimeEnvironment, messages: Messages)
 @import securesocial.core.providers.UsernamePasswordProvider
 @import securesocial.core.IdentityProvider
 @import helper._
