--- a/app/views/custom/notAuthorized.scala.html
+++ b/app/views/custom/notAuthorized.scala.html
@@ -1,4 +1,4 @@
-@()(implicit request: RequestHeader, lang: play.api.i18n.Lang, env: securesocial.core.RuntimeEnvironment, messages: Messages, appContext: AppContext)
+@()(implicit request: RequestHeader, env: securesocial.core.RuntimeEnvironment, messages: Messages)
 
 @main(Messages("securesocial.notAuthorized.title")){
     <div class="container maincontent-container">
