--- a/app/views/custom/passwordChange.scala.html
+++ b/app/views/custom/passwordChange.scala.html
@@ -1,4 +1,4 @@
-@(passwordChangeForm:play.api.data.Form[securesocial.controllers.ChangeInfo])(implicit request: RequestHeader, env: securesocial.core.RuntimeEnvironment, messages: Messages, appContext: AppContext)
+@(passwordChangeForm:play.api.data.Form[securesocial.controllers.ChangeInfo])(implicit request: RequestHeader, env: securesocial.core.RuntimeEnvironment, messages: Messages)
 @import securesocial.core.IdentityProvider
 @import helper._
 @implicitFieldConstructor = @{ FieldConstructor(securesocial.views.html.inputFieldConstructor.f) }
