--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -15,7 +15,7 @@
         userRateForm: Html = Html(""),
         userLikeForm: Html = Html(""),
         requestForm: Html = Html(""),
-        favorites: Html = Html(""))(implicit request: RequestHeader, flash: Flash, messages: Messages, appContext: AppContext)
+        favorites: Html = Html(""))(implicit request: RequestHeader, flash: Flash, messages: Messages)
 @import play.twirl.api.Html
 
 @pageScripts = {
