--- a/app/views/profile/tags.scala.html
+++ b/app/views/profile/tags.scala.html
@@ -1,6 +1,6 @@
 @(TagDataForm: Form[models.viewmodels.TagsData],
         element: List[Type],
-        klass: Types)(implicit request: RequestHeader, flash: Flash = Flash.emptyCookie, messages: Messages, appContext: AppContext)
+        klass: Types)(implicit request: RequestHeader, flash: Flash = Flash.emptyCookie, messages: Messages)
 
 @main(Messages("profile.create.title")){
 
