--- a/app/views/worlds/index.scala.html
+++ b/app/views/worlds/index.scala.html
@@ -1,4 +1,4 @@
-@(worlds: List[models.World], path: List[models.World])(implicit request: RequestHeader, messages: Messages, appContext: AppContext)
+@(worlds: List[models.World], path: List[models.World])(implicit request: RequestHeader, messages: Messages)
 
 @main("Worlds page"){
     <ul>
