--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -49,6 +49,8 @@
         <script src="@routes.Assets.at("js/libs/bootstrap-datetimepicker-4.17.37/build/js/bootstrap-datetimepicker.min.js")"></script>
         @views.html.file.fileScripts()
         <script src="@routes.Assets.at("js/site.js")"></script>
+        <script src="@routes.Assets.at("js/app/tinymce-init.js")"></script>
+        <script src="@routes.Assets.at("js/app/comfirm-alerts.js")"></script>
         <script src="@routes.Assets.at("js/app/json-requests.js")"></script>
         <script src="@routes.Assets.at("js/app/multi-form.js")"></script>
         @footerScripts
