--- a/app/views/mainedit.scala.html
+++ b/app/views/mainedit.scala.html
@@ -51,10 +51,12 @@
         <script src="@routes.Assets.at("js/libs/jquery.collapser.2.0.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/star-rating.2.0.0.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/bootbox.4.3.0.min.js")"></script>
+        <script src="@routes.Assets.at("js/libs/jquery-validation-1.14.0/dist/jquery.validate.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/moment-2.10.6/min/moment-with-locales.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/bootstrap-datetimepicker-4.17.37/build/js/bootstrap-datetimepicker.min.js")"></script>
         @views.html.file.fileScripts()
-        <script src="@routes.Assets.at("js/site.js")"></script>
+        <script src="@routes.Assets.at("js/app/tinymce-init.js")"></script>
+        <script src="@routes.Assets.at("js/app/comfirm-alerts.js")"></script>
         @shared.modalConfirm()
         @footerScripts
     </body>
