Creates objects for non logged in visiters and logged in visiters if access is done by eigher one and object is not present for the visited profile

--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -189,7 +189,7 @@
                             </div>
                         </div>
 
-                        @if((myReviewBoxes.nonEmpty || myRecipeReviewBoxes.nonEmpty) && isThisMyProfile) {
+                        @if(isThisMyProfile) {
 
 
                                 <div class="panel panel-default panel-dropshadow big-margin-top">
