--- a/app/views/file/openModalButton.scala.html
+++ b/app/views/file/openModalButton.scala.html
@@ -1,7 +1,7 @@
 @(btnId: String, inputSelector: String = "", selectorMaxItems: Int = 0, btnText: String = "", editMode: Boolean = false)(implicit messages: Messages)
 
 @defining(if(btnText.isEmpty) { Messages("file.button.choose-files-default") }else{ btnText} ) { btnT: String =>
-    <button type="button" class="btn btn-default" id="@btnId">@btnT</button>
+    <button type="button" class="btn btn-warning" id="@btnId">@btnT</button>
 }
 
 <script>
