--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -166,12 +166,19 @@
                                 <br>@if(userProfile.getLocations.iterator().hasNext()){
                                 <strong>@Messages("profile.county.text")</strong> <span class="sentence-case">@customUtils.Helpers.titleCase(userProfile.getLocations.iterator().next().county.name)</span>
                                 }
-                                <br><strong>@Messages("profile.options.childFfriendly.label")</strong> <span class="sentence-case">@customUtils.Helpers.titleCase(userProfile.childFfriendly)</span>
-                                <br><strong>@Messages("profile.options.handicapFriendly.label")</strong> <span class="sentence-case">@customUtils.Helpers.titleCase(userProfile.handicapFriendly)</span>
-                                <br><strong>@Messages("profile.options.havePets.label")</strong> <span class="sentence-case">@customUtils.Helpers.titleCase(userProfile.havePets)</span>
-                                <br><strong>@Messages("profile.options.smoke.label")</strong> <span class="sentence-case">@customUtils.Helpers.titleCase(userProfile.smoke)</span>
-                                <br><strong>@Messages("profile.options.allkoholServing.label")</strong> <span class="sentence-case">@customUtils.Helpers.titleCase(userProfile.allkoholServing)</span>
-                                <br><strong>@Messages("profile.payment.label")</strong> <span class="sentence-case">@customUtils.Helpers.titleCase(userProfile.payBankCard) @customUtils.Helpers.titleCase(userProfile.payCache) @customUtils.Helpers.titleCase(userProfile.payIZettle) @customUtils.Helpers.titleCase(userProfile.paySwish)</span>
+                                <br><strong>@Messages("profile.payment.label")</strong>
+                                <span class="sentence-case">
+                                    @if(userProfile.payCash){ @Messages("profile.payment.cash") }
+                                    @if(userProfile.payBankCard){ @Messages("profile.payment.banktransfer") }
+                                    @if(userProfile.payIZettle){ @Messages("profile.payment.izettle") }
+                                    @if(userProfile.paySwish){ @Messages("profile.payment.Swish") }
+                                </span>
+                                <hr>
+                                <strong>@Messages("profile.options.moved-info.header")</strong>
+                                <br>@Html(Messages("profile.options.moved-info"))
+
+                                @{
+                                /*
                                 <br><strong>@Messages("profile.nr-of-guests.label")</strong> <span class="sentence-case">
                                     @{userProfile.minNoOfGuest match {
                                         case "" | null => { 1 }
@@ -184,41 +191,39 @@
                                     }}
                                     personer
                                 </span>
-
+                                */
+                                }
 
                             </div>
                         </div>
 
                         @if(isThisMyProfile) {
+                            <div class="panel panel-default panel-dropshadow big-margin-top">
+                                <div class="panel-body">
+                                    <strong>@Messages("profile.visitors.header")</strong><br>
+                                    <table style="width:100%">
+                                        <tr>
+                                            <td>@Messages("profile.visitors.logged-in")</td>
+                                            <td align="right">
+                                            @{userProfile.getmemberVisited() match {
+                                                case  null => { 0 }
+                                                case _ => { userProfile.getmemberVisited().getSize }
+                                            }}
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>@Messages("profile.visitors.not-logged-in")</td>
+                                            <td align="right">
+                                            @{userProfile.getUnKnownVisited() match {
+                                                case  null => { 0 }
+                                                case _ => { userProfile.getUnKnownVisited().getSize }
+                                            }}
+                                            </td>
+                                        </tr>
+                                    </table>
 
-
-                                <div class="panel panel-default panel-dropshadow big-margin-top">
-                                    <div class="panel-body">
-                                        Antal besökare:
-                                        <br>
-                                        <table style="width:100%">
-                                            <tr>
-                                                <td>Inloggade:</td>
-                                                <td align="right">
-                                                @{userProfile.getmemberVisited() match {
-                                                    case  null => { 0 }
-                                                    case _ => { userProfile.getmemberVisited().getSize }
-                                                }}
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <td>Icke inloggade: </td>
-                                                <td align="right">
-                                                @{userProfile.getUnKnownVisited() match {
-                                                    case  null => { 0 }
-                                                    case _ => { userProfile.getUnKnownVisited().getSize }
-                                                }}
-                                                </td>
-                                            </tr>
-                                        </table>
-
-                                    </div>
                                 </div>
+                            </div>
                         }
                     </div>
                 </div>
