--- a/app/views/event/addOrEdit.scala.html
+++ b/app/views/event/addOrEdit.scala.html
@@ -2,6 +2,10 @@
 
 @(eventForm: Form[EventForm], editingEvent: Option[models.Event] = None, extraValues: models.viewmodels.EditEventExtraValues)(implicit flash: Flash = Flash.emptyCookie, request: RequestHeader, messages: Messages)
 
+@implicitFieldConstructor = @{ b3.vertical.fieldConstructor }
+@inlineFC = @{
+    b3.inline.fieldConstructor
+}
 @script = {
     <script>
     $(document).ready(function(){
@@ -17,16 +21,60 @@
             }
         };
 
-        $('.form-control.date input[type=date]').datetimepicker(
-            {
-            locale: 'sv',
+        var dateTimePickerOptions = {
+            locale: "sv",
+            minDate: "now",
             sideBySide: true,
-            stepping: 30
-            }
-        );
+            stepping: 15
+        };
+
+        $(".date input[type=datetime]").datetimepicker(dateTimePickerOptions);
+        $(".remove-button").on("click", removeDate);
+
+/*
+        function dateTemplate(){
+            var str = '' +
+            '<div id="orig-date-group" class="input-group date">'
+            '<div class="form-group date" id="eventDates_0_date_field">'
+    		'<label class="control-label" for="eventDates_0_date"><span class="glyphicon glyphicon-calendar"></span>&nbsp;Välj datum &amp; tid</label>'
+	        '<input id="eventDates_0_date" name="eventDates[0].date" value="" aria-describedby="eventDates_0_date_info_0 eventDates_0_date_error_0" aria-invalid="false" class="form-control" type="datetime">'
+			'<span style="display: none;" id="eventDates_0_date_error_0" class="help-block"></span>'
+			'<span style="display: none;" id="eventDates_0_date_info_0" class="help-block"></span>'
+            '</div>'
+            '<input id="eventDates_0_id" name="eventDates[0].id" value="" type="hidden">'
+            '<input id="eventDates_0_guestsbooked" name="eventDates[0].guestsbooked" value="" type="hidden">'
+        }
+*/
+        $("#add-more-dates").click(function(){
+           var $dateContainer = $("#date-container");
+           var $dateClone = $("#orig-date-group").clone();
+           var nrOfDates = $dateContainer.children().length;
+
+           $dateClone = $dateClone.removeAttr("id").html(function(i, oldHTML) {
+            // Replaces _0_ and [0] and removes any values
+            oldHTML = oldHTML.replace(/value\=\"._\"/gi, "value=\"\"");
+            return oldHTML.replace(/0/gi, nrOfDates);
+           });
+           $dateClone.find("input[type=datetime]").datetimepicker(dateTimePickerOptions);
+           $dateClone.find(".remove-button").removeClass("hidden").on("click", removeDate);
+           $dateContainer.append($dateClone);
+        });
+
         initMultiForm(formValRules);
 
     });
+
+    function removeDate(){
+        var $this = $(this);
+        var $parent = $this.closest(".input-group.date");
+        // TODO add check for if people has booked
+        if($parent.find(".guestsbooked").attr("value") > 0){
+            alert("@Messages("event.edit.add.date-time.remove-date.guests-booked")");
+        }else{
+            $parent.remove();
+        }
+    }
+
     </script>
 }
 @main(Messages("event.create.title"), footerHtml = file.modalImages.render(messages), footerScripts = script){
@@ -41,15 +89,15 @@
                 </div>
                 @shared.flashmsg(flash)
 
-                @helper.form(action=controllers.routes.EventPageController.addSubmit(), 'enctype -> "multipart/form-data", 'class -> "form-multistep form-horizontal"){
+                @b3.form(action=controllers.routes.EventPageController.addSubmit(), 'enctype -> "multipart/form-data", 'class -> "form-multistep"){
                     <fieldset>
                         <div class="step">
-                            @helper.inputText(eventForm("name"), '_label -> Messages("event.edit.add.name"), '_help -> "*")
+                            @helper.inputText(eventForm("name"), '_label -> Messages("event.edit.add.name"), '_error -> Messages("event.edit.add.name.validation"))
                             <div class="margin-top">@Html(Messages("event.edit.add.name.help-text"))</div>
                         </div>
 
                         <div class="step">
-                            @helper.textarea(eventForm("body"), '_label -> Messages("event.edit.add.body"), 'class -> "richtext-extra")
+                            @helper.textarea(eventForm("body"), '_label -> Messages("event.edit.add.body"), '_error -> Messages("event.edit.add.body.validation"), 'class -> "richtext-extra")
                             <div class="margin-top">@Html(Messages("event.edit.add.body.help-text"))</div>
                         </div>
 
@@ -59,19 +107,28 @@
                         </div>
 
                         <div class="step">
-                            @helper.repeat(field = eventForm("eventDates"), min = 1) { eventDatesField =>
-                                <div class="form-group">
-                                    <div class="input-group date">
-                                        @helper.inputDate(eventDatesField("date"), '_label -> Messages("event.edit.add.date"), '_help -> Messages("event.edit.add.date.validation"), '_class -> "form-control date")
-                                        @helper.inputHidden(eventDatesField("id"))
-                                        @helper.inputHidden(eventDatesField("guestsbooked"))
-                                        <span class="input-group-addon">
-                                            <span class="glyphicon glyphicon-calendar"></span>
-                                        </span>
-                                    </div>
+                            <div class="row">
+                                <div id="date-container" class="col-xs-12 col-md-4">
+                                    @helper.repeat(field = eventForm("eventDates"), min = 1) { eventDatesField =>
+                                        <div id="orig-date-group" class="input-group date">
+                                            @b3.datetime(eventDatesField("date"), '_label -> Html("<span class=\"glyphicon glyphicon-calendar\"></span>&nbsp;" + Messages("event.edit.add.date")), '_help -> Messages("event.edit.add.date.help"), '_error -> Messages("event.edit.add.date.validation"), '_class -> "date")
+                                            @helper.inputHidden(eventDatesField("id"))
+                                            @helper.inputHidden(eventDatesField("guestsbooked"), '_class -> "guestsbooked")
+                                            @b3.button('class -> "remove-button btn btn-danger hidden", '_title -> Messages("event.edit.add.date-time.remove-date")){ <span class="glyphicon glyphicon-remove"></span> }
+                                        </div>
+                                    }
                                 </div>
-                            }
-                            <div class="margin-top">@Html(Messages("event.edit.add.date.help-text"))</div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <div class="margin-top">@Html(Messages("event.edit.add.date-time.help-text"))</div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-6">
+                                    @b3.button('id -> "add-more-dates", 'class -> "btn btn-default"){ <span class="glyphicon glyphicon-plus"></span> @Messages("event.edit.add.date-time.add-date") }
+                                </div>
+                            </div>
                         </div>
 
                         <div class="step">
