- Added prototype support for grunt - disabled for now - Added missing minified jQuery Validation - Fixed updated reference for bootstrap 3 plugins

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -50,7 +50,7 @@
         @views.html.file.fileScripts()
         <script src="@routes.Assets.at("js/site.js")"></script>
         <script src="@routes.Assets.at("js/app/tinymce-init.js")"></script>
-        <script src="@routes.Assets.at("js/app/comfirm-alerts.js")"></script>
+        <script src="@routes.Assets.at("js/app/confirm-alerts.js")"></script>
         <script src="@routes.Assets.at("js/app/json-requests.js")"></script>
         <script src="@routes.Assets.at("js/app/multi-form.js")"></script>
         @footerScripts
