--- a/app/views/mainedit.scala.html
+++ b/app/views/mainedit.scala.html
@@ -56,7 +56,7 @@
         <script src="@routes.Assets.at("js/libs/bootstrap-datetimepicker-4.17.37/build/js/bootstrap-datetimepicker.min.js")"></script>
         @views.html.file.fileScripts()
         <script src="@routes.Assets.at("js/app/tinymce-init.js")"></script>
-        <script src="@routes.Assets.at("js/app/comfirm-alerts.js")"></script>
+        <script src="@routes.Assets.at("js/app/confirm-alerts.js")"></script>
         @shared.modalConfirm()
         @footerScripts
     </body>
